# cli

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: main.rs
