[package]
name = "ip6gen"
description = "A command line tool for generating unique and reproducible IPv6 addresses"
version = "0.0.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/ip6gen"
readme = "README.md"
keywords = ["IP", "IPv6"]
authors = ["Rushmore <rushmore@webenchanter.com>"]

[dependencies]
clap = "2.13.0"
ipgen = "0.0.1"
