[package]
name = "ipgen-cli"
description = "A command line tool for generating unique and reproducible IP addresses"
version = "0.0.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/ipgen/cli"
readme = "README.md"
keywords = ["IP", "IPv6"]
authors = ["Rushmore <rushmore@webenchanter.com>"]
edition = "2018"

[[bin]]
name = "ipgen"

[dependencies]
clap = "2.33.3"
ipgen = "0.0.5"
