[package]
name = "ipgen-cli"
description = "A command line tool for generating unique and reproducible IP addresses"
version = "1.0.3-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/ipgen/cli"
readme = "README.md"
keywords = ["IP", "IPv6"]
authors = ["Rushmore <rushmore@webenchanter.com>"]
edition = "2018"

[[bin]]
name = "ipgen"

[dependencies]
structopt = "0.3.21"
ipgen = "1.0.1"
